# ShootingCV

./: .gitignore  FrameSourceModel.qml  LogosModel.qml  ShootingCV.pro  global.h  main.cpp  main.qml  main_screen.cpp  main_screen.h  mainscreen.cpp  mainscreen.h  opencv_interface.cpp  opencv_interface.h  opencvhandler.cpp  opencvhandler.h  qml.qrc  target.cpp  target.h  target_image_provider.cpp  target_image_provider.h  targetimageprovider.cpp
cppTest/: CMakeLists.txt  global.h  target.cpp
pythonTarget/: center_search.py  image_server.py  main_target.py  ray_search.py  socket_server.py  target.py  target_provider.py
targetJsClient/: index.js  package-lock.json  package.json
targetJsClient/public/css/: styles.css
targetJsClient/public/html/: index.html
targetJsClient/public/js/: buttons.js  receive_script.js
